Se añade la etiqueta header, con sus respectivos elementos tales como: logo, main-hamburguer, nav, ul, li, a, button, etc

--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+	    <!-- Header -->
+    
+		<header class="main-header">
+
+			<!-- Logo -->
+			<a href="index.html" class="home">
+				<img src="images/logo.svg" alt="Logo-Principal" class="main-header__logo">
+			</a>
 	
+			<div class="main-header__content" id="main-header__content">
+				
+				<!-- Barra de navegación -->
+				<nav class="main-header__nav" id="main-header__nav">
+					<ul class="main-header__list">
+						<li class="main-list__link"><a href="#" class="main-header__list-link">Pricing</a></li>
+						<li class="main-list__link"><a href="#" class="main-header__list-link">Product</a></li>
+						<li class="main-list__link"><a href="#" class="main-header__list-link">About Us</a></li>
+						<li class="main-list__link"><a href="#" class="main-header__list-link">Careers</a></li>
+						<li class="main-list__link"><a href="#" class="main-header__list-link">Community</a></li>
+					</ul>
+				</nav>
+			</div>
+	
+			<!-- Menú Hamburguesa -->
+			<div class="container-main-hamburguer" id="main-hamburguer"></div>
+	
+			<!-- Botón del Header -->
+			<a href="#" class="main-button main-button--header">Get Started</a>
+		</header>
 </body>
 </html>
