Se agrego id al elemento hero

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</header>
 
 	<!-- Hero -->
-	<div class="main-hero">
+	<div class="main-hero" id="main-hero">
 
 		<!-- Aquí irá el título, texto y botón de Hero -->
 		<div class="main-hero__info">
