--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	<link rel="shortcut icon" href="images/White-logo.png" type="image/png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
 	
 	<!-- Header -->
+
 	<header class="main-header">
 		
 		<!-- Logo -->
@@ -45,6 +46,7 @@
 	</header>
 
 	<!-- Hero -->
+
 	<div class="main-hero" id="main-hero">
 
 		<!-- Aquí irá el título, texto y botón de Hero -->
@@ -61,7 +63,29 @@
 		</div>
 	</div>
 
+	<!-- Contenido principal -->
 
+	<main class="main">
+
+		<!-- Primera parte -->
+		<div class="main__first-part">
+			<h2 class="main-subtitle">What’s different about Manage?</h2>
+			<p class="main-paragraph">Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams. </p>
+
+		</div>
+
+		<!-- Segunda parte -->
+		<div class="main__second-part">
+			<p href="#" class="text-bold">Track company-wide progress</p>
+			<p class="main-paragraph">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.</p>
+
+			<p href="#" class="text-bold text-bold-second">Advanced built-in reports</p>
+			<p class="main-paragraph">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+
+			<p href="#" class="text-bold text-bold-third">All you need in one place</p>
+			<p class="main-paragraph">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
+		</div>
+	</main>
 
 	<script src="JS/script.js"></script>
 </body>
